# Commando-1985-NES-Edition_v2

./: README.md
Comando versión definitiva/: .gitignore  CMakeLists.txt  build-assets.sh  build-emscripten.js  index.html
Comando versión definitiva/src/: Animation.h  Enemy_Bosslvl1.cpp  Enemy_Bosslvl1.h  Enemy_Knife.h  Enemy_WhiteGuard.cpp  Enemy_WhiteGuard.h  Globals.cpp  Globals.h  Main.cpp  MemLeaks.h  ModuleAudio.cpp  ModuleAudio.h  ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModuleFonts.h  ModuleInput.cpp  ModuleInput.h  ModuleParticles.cpp  ModulePowerUp.cpp  ModuleRender.cpp  ModuleTextures.cpp  ModuleWelcome.h  ModuleWindow.cpp  PathWhiteGuard.cpp  PathWhiteGuard.h
